header overflow fixed

--- a/my-app/src/components/header/header.css
+++ b/my-app/src/components/header/header.css
@@ -129,18 +129,21 @@ header:hover .navigate__link a:hover {
   header {
     grid-template-columns: auto;
     background: var(--white);
-    height: 10vh;
+    /* height: 10vh; */
     position: fixed;
+    height: fit-content;
   }
 
   .brand {
     width: 90%;
+    height: fit-content;
   }
 
   .brand__section {
     display: flex;
     flex-direction: row;
     width: 100vw;
+    height: fit-content;
   }
 
   .brand__image {
@@ -247,16 +250,19 @@ header:hover .navigate__link a:hover {
     grid-template-columns: auto;
     background: var(--white);
     padding: 6px 0;
-    height: 6vh;
+    /* height: 6vh; */
+    height: fit-content;
   }
 
   .brand {
     width: 90%;
+    height: fit-content;
   }
 
   .brand__section {
     display: flex;
     flex-direction: row;
+    height: fit-content;
   }
 
   .brand__image {
